force-app/main/default/objects/Station__c/Station__c.object-meta.xml
<CustomObject>
    <label>Station</label>
    <nameField>
        <displayFormat>STATION-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>