force-app/main/default/objects/Station__c/fields/stationId__c.field-meta.xml
<CustomField>
    <fullName>stationId__c</fullName>
    <externalId>true</externalId>
    <label>Station Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>