force-app/main/default/objects/Station__c/fields/stationOpen__c.field-meta.xml
<CustomField>
    <fullName>stationOpen__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the button is checked the station is open for renting out cars. This not a box there a managing open closed hours it is managing if the station is closed for good.</description>
    <label>Station Open</label>
    <type>Checkbox</type>
</CustomField>