force-app/main/default/objects/Station__c/fields/stationRelation__c.field-meta.xml
<CustomField>
    <fullName>stationRelation__c</fullName>
    <description>This field is to describe that which relation the station has to Sixt Denmark.</description>
    <label>Station Relation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sixt DK Owned</fullName>
            </value>
            <value>
                <fullName>Sub Franchise</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>