force-app/main/default/objects/Station__c/fields/stationType__c.field-meta.xml
<CustomField>
    <fullName>stationType__c</fullName>
    <label>Station Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airpot</fullName>
            </value>
            <value>
                <fullName>City</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>